Initial version of term viewer.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ input, textarea {
   height: 500px;
   width: 400px;
 }
+body, textarea, input {
+  font-family: monospace;
+  color: #1e1e5d;
+}
+error {
+  color: #c12828;
+}
   </style>
 </head>
 <body>
