--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@ div.lvca-viewer {
   grid-template-columns: 50% 50%;
   grid-template-rows: 100px auto;
   grid-template-areas:
-    "header1 header1"
-    "header2-l header2-r"
-    "left-pane right-pane";
+    "header1                 header1" /* LVCA */
+    "header2-abstract-syntax header2-repl"
+    "abstract-syntax-pane    repl-pane"
+    "header2-statics         repl-pane"
+    "statics-pane            repl-pane"
+    "header2-dynamics        repl-pane"
+    "dynamics-pane           repl-pane"
 }
 h1, h2 {
   margin: 0;
@@ -48,28 +52,67 @@ h1.header {
 h2.header2 {
   padding: 15px 0 10px 20px;
 }
-h2.header2-left {
-  grid-area: header2-l;
-  border: 2px solid #1e1e5d;
-}
-h2.header2-right {
-  grid-area: header2-r;
+h2.header2-abstract-syntax {
+  grid-area: header2-abstract-syntax;
+  border-left: 2px solid #1e1e5d;
   border-top: 2px solid #1e1e5d;
-  border-right: 2px solid #1e1e5d;
   border-bottom: 2px solid #1e1e5d;
 }
-div.left-pane {
-  grid-area: left-pane;
+h2.header2-statics {
+  grid-area: header2-statics;
+  border-left: 2px solid #1e1e5d;
+  border-bottom: 2px solid #1e1e5d;
+}
+h2.header2-dynamics {
+  grid-area: header2-dynamics;
+  border-left: 2px solid #1e1e5d;
+  border-bottom: 2px solid #1e1e5d;
+}
+h2.header2-repl {
+  grid-area: header2-repl;
+  border-left: 2px solid #1e1e5d;
+  border-right: 2px solid #1e1e5d;
+  border-top: 2px solid #1e1e5d;
+  border-bottom: 2px solid #1e1e5d;
+}
+div.abstract-syntax-pane {
+  grid-area: abstract-syntax-pane;
+  border-left: 2px solid #1e1e5d;
+  border-bottom: 2px solid #1e1e5d;
+  padding: 20px;
+}
+div.statics-pane {
+  grid-area: statics-pane;
+  border-left: 2px solid #1e1e5d;
+  border-bottom: 2px solid #1e1e5d;
+  padding: 20px;
+}
+div.dynamics-pane {
+  grid-area: dynamics-pane;
+  border-left: 2px solid #1e1e5d;
+  border-bottom: 2px solid #1e1e5d;
+  padding: 20px;
+}
+div.repl-pane {
+  grid-area: repl-pane;
   border-left: 2px solid #1e1e5d;
   border-right: 2px solid #1e1e5d;
   border-bottom: 2px solid #1e1e5d;
   padding: 20px;
 }
-div.right-pane {
-  grid-area: right-pane;
-  border-right: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-  padding: 20px;
+div.term-view {
+  border-top: 2px solid #1e1e2d;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+div.repl-pane .CodeMirror pre {
+  padding: 0;
+}
+span.result-bad {
+  color: #c12828;
+}
+span.result-good {
+  color: #06925a;
 }
 .CodeMirror {
   height: auto;
