--- a/index.html
+++ b/index.html
@@ -100,13 +100,19 @@ div.repl-pane {
   border-bottom: 2px solid #1e1e5d;
   padding: 20px;
 }
+div.term-input {
+  padding: 10px;
+  border: 2px solid #1e1e2d;
+}
 div.term-view {
-  border-top: 2px solid #1e1e2d;
   margin-top: 10px;
   padding-top: 10px;
 }
 div.repl-pane .CodeMirror pre {
   padding: 0;
+}
+div.repl-pane.disabled {
+  background: #f5f5f5;
 }
 span.result-bad {
   color: #c12828;
