--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>LVCA Page</title>
+  <title>LVCA</title>
   <link href="./node_modules/codemirror/lib/codemirror.css" rel="stylesheet">
   <style type="text/css">
 input:focus, textarea {
