Refactor + autofocus repl editor.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@ div.term-input {
   padding: 10px;
   border: 2px solid #1e1e2d;
 }
+div.history-item {
+  padding: 10px;
+  margin: 10px 0;
+  border: 2px solid #1e1e2d;
+}
 div.term-view {
   margin-top: 10px;
   padding-top: 10px;
