--- a/index.html
+++ b/index.html
@@ -105,12 +105,15 @@ div.term-input {
   border: 2px solid #1e1e2d;
 }
 div.history-item {
+  margin: 30px 0;
+}
+div.history-input {
   padding: 10px;
-  margin: 10px 0;
+  margin: 5px 0;
   border: 2px solid #1e1e2d;
 }
 div.term-view {
-  margin-top: 10px;
+  margin-top: 5px;
   padding-top: 10px;
 }
 div.repl-pane .CodeMirror pre {
