--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ div.history-input {
   padding: 10px;
   margin: 5px 0;
   border: 2px solid #1e1e2d;
+  cursor: pointer;
 }
 div.term-view {
   margin-top: 5px;
