--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@ div.repl-pane {
 }
 div.term-input {
   padding: 10px;
-  border: 2px solid #1e1e2d;
+  border: 2px dashed #1e1e2d;
 }
 div.history-item {
   margin: 30px 0;
 }
 div.history-input {
-  padding: 10px;
+  padding: 14px 10px;
   margin: 5px 0;
   border: 2px solid #1e1e2d;
   cursor: pointer;
@@ -131,6 +131,10 @@ span.result-good {
 }
 .CodeMirror {
   height: auto;
+}
+div.eval-result-row {
+  display: flex;
+  justify-content: space-between;
 }
   </style>
 </head>
