Add external css file.

--- a/index.html
+++ b/index.html
@@ -4,152 +4,7 @@
   <meta charset="UTF-8">
   <title>LVCA</title>
   <link href="./node_modules/codemirror/lib/codemirror.css" rel="stylesheet">
-  <style type="text/css">
-input:focus, textarea {
-  outline: none !important;
-}
-input, textarea {
-  height: 500px;
-  width: 400px;
-}
-body, textarea, input {
-  font-family: monospace;
-  color: #1e1e5d;
-}
-body {
-  font-size: 16px;
-}
-h1 {
-  font-weight: 400;
-}
-h2 {
-  font-weight: 200;
-}
-.error {
-  color: #c12828;
-}
-div.lvca-viewer {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 100px auto;
-  grid-template-areas:
-    "header1                 header1" /* LVCA */
-    "header2-abstract-syntax header2-repl"
-    "abstract-syntax-pane    repl-pane"
-    "header2-concrete        repl-pane"
-    "concrete-pane           repl-pane"
-    "header2-statics         repl-pane"
-    "statics-pane            repl-pane"
-    "header2-dynamics        repl-pane"
-    "dynamics-pane           repl-pane"
-}
-h1, h2 {
-  margin: 0;
-}
-h1.header {
-  margin-left: 20px;
-  margin-top: 30px;
-  grid-area: header1;
-}
-h2.header2 {
-  padding: 15px 0 10px 20px;
-}
-h2.header2-abstract-syntax {
-  grid-area: header2-abstract-syntax;
-  border-left: 2px solid #1e1e5d;
-  border-top: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-}
-h2.header2-concrete {
-  grid-area: header2-concrete;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-}
-h2.header2-statics {
-  grid-area: header2-statics;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-}
-h2.header2-dynamics {
-  grid-area: header2-dynamics;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-}
-h2.header2-repl {
-  grid-area: header2-repl;
-  border-left: 2px solid #1e1e5d;
-  border-right: 2px solid #1e1e5d;
-  border-top: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-}
-div.abstract-syntax-pane {
-  grid-area: abstract-syntax-pane;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-  padding: 20px;
-}
-div.concrete-pane {
-  grid-area: concrete-pane;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-  padding: 20px;
-}
-div.statics-pane {
-  grid-area: statics-pane;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-  padding: 20px;
-}
-div.dynamics-pane {
-  grid-area: dynamics-pane;
-  border-left: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-  padding: 20px;
-}
-div.repl-pane {
-  grid-area: repl-pane;
-  border-left: 2px solid #1e1e5d;
-  border-right: 2px solid #1e1e5d;
-  border-bottom: 2px solid #1e1e5d;
-  padding: 20px;
-}
-div.term-input {
-  padding: 10px;
-  border: 2px dashed #1e1e2d;
-}
-div.history-item {
-  margin: 30px 0;
-}
-div.history-input {
-  padding: 14px 10px;
-  margin: 5px 0;
-  border: 2px solid #1e1e2d;
-  cursor: pointer;
-}
-div.term-view {
-  margin-top: 5px;
-  padding-top: 10px;
-}
-div.repl-pane .CodeMirror pre {
-  padding: 0;
-}
-div.repl-pane.disabled {
-  background: #f5f5f5;
-}
-span.result-bad {
-  color: #c12828;
-}
-span.result-good {
-  color: #06925a;
-}
-.CodeMirror {
-  height: auto;
-}
-div.eval-result-row {
-  display: flex;
-  justify-content: space-between;
-}
-  </style>
+  <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
   <div id="index"></div>
