Create new pages directory.

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>LVCA</title>
-  <link href="./node_modules/codemirror/lib/codemirror.css" rel="stylesheet">
+  <link href="../node_modules/codemirror/lib/codemirror.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
   <div id="index"></div>
-  <script src="bundledOutputs/documentRender.js"></script>
+  <script src="../bundledOutputs/index.js"></script>
 </body>
 </html>
