Split Hutton's razor components.

--- a/pages/0x-huttons-razor/index.html
+++ b/pages/0x-huttons-razor/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" type="text/css" href="../style/index.css">
     </head>
     <body>
-        <div id="app"></div>
+        <h2>concrete syntax -> abstract</h2>
+        <div id="parse-app"></div>
+        <h2>abstract syntax -> concrete</h2>
+        <div id="pretty-app"></div>
+        <h2>typechecking</h2>
+        <div id="typecheck-app"></div>
     </body>
 </html>
