Some work on bidirectional debugger page.

--- a/pages/0x-bidirectional-debugger/index.html
+++ b/pages/0x-bidirectional-debugger/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>LVCA 0x: bidirectional debugger</title>
         <script defer src="main.bc.js"></script>
-        <link rel="stylesheet" type="text/css" href="../style/index.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="codemirror.css">
     </head>
     <body>
         <div id="app"></div>
