--- a/pages/02-term-to-tex/index.html
+++ b/pages/02-term-to-tex/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>LVCA 02: term -> TeX</title>
         <link rel="stylesheet" type="text/css" href="../style/index.css">
+        <link rel="stylesheet" type="text/css" href="../style/codemirror.css">
         <link rel="stylesheet" type="text/css" href="katex.css">
         <script defer src="katex.js"></script>
         <script defer src="main.bc.js"></script>
