--- a/pages/01-term-and-concrete/index.html
+++ b/pages/01-term-and-concrete/index.html
@@ -9,4 +9,24 @@
     <body>
         <div id="app"></div>
     </body>
+<style>
+.side {
+  padding: 20px;
+}
+.input {
+  margin-top: 20px;
+  display: block;
+  border: 2px solid;
+  padding: 2em;
+}
+.output {
+  padding: 1em;
+  background-color: hsl(0 0% 95% / 1);
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  max-width: 1200px;
+}
+</style>
 </html>
