--- a/pages/index.html
+++ b/pages/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>LVCA demos</title>
+        <script defer src="katex.js"></script>
         <script defer src="main.bc.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="katex.css">
     </head>
     <body>
         <div id="app"></div>
