--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>LVCA demos</title>
         <script defer src="katex.js"></script>
-        <script defer src="main.bc.js"></script>
+        <script defer src="devel_main.bc.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="katex.css">
     </head>
