--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
         <title>LVCA demos</title>
         <script defer src="katex.js"></script>
         <script defer src="devel_main.bc.js"></script>
-        <link rel="stylesheet" type="text/css" href="tailwind-style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="katex.css">
     </head>
     <body>
