Styling / site updates.

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
         <script defer src="devel_main.bc.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="katex.css">
+        <link rel="icon" href="favicon512.png" type="image/png" sizes="512x512">
     </head>
     <body>
         <div id="app"></div>
